--- a/billing_a/cup10608.html
+++ b/billing_a/cup10608.html
@@ -202,16 +202,26 @@
 												</dd>
 											</dl>
 										</li>
+
+										<!-- 2019-02-27 수정 -->
 										<li>
 											<dl class="inpItem">
 												<dt id="10608_paymentMethodLb">Payment Method</dt>
 												<dd>
-													<div class="inputBox">
-														<input type="text" name="10608_paymentMethod" class="inp Readonly" id="10608_paymentMethod" readonly="readonly" value="Manual – Bank Account" tabindex="-1">
+													<div class="comboBox readonly">
+														<select class="comboSelect" id="10608_paymentMethod" placeholder="Select a Type" readonly="readonly">
+															<option value="">Select a Type</option>
+															<option value="T-Shirt" selected="selected">T-Shirt</option>
+															<option value="T-Shirt Woman">T-Shirt Woman</option>
+															<option value="Yellow T-Shirt">Yellow T-Shirt</option>
+															<option value="Zebra T-Shoot">Zebra T-Shoot</option>
+														</select>
 													</div>
 												</dd>
 											</dl>
 										</li>
+										<!--// 2019-02-27 수정 -->
+
 										<li>
 											<dl class="inpItem">
 												<dt id="10608_billingPartyLb">Billing Party</dt>
